# r-chat

./: Cargo.toml
src/: chat_api.rs  main.rs
src/chat_api/: auth.rs  db_helper.rs  messages.rs  routes.rs
