[package]
name = "r_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio= {version = "1", features = ["full"]}
axum = "0.7.5"
axum-macros = "0.4.1"
log = "0.4"
rusqlite = {version = "0.31", features = ["bundled"]}
dotenv = "0.15"
serde = { version = "1.0.209", features = ["derive"] }
bcrypt = "0.15.1"
deadpool-sqlite = {version = "0.8", features = ["rt_tokio_1"]}
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde_json = "1.0.128"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
